--- a/todoapp/android/build.gradle
+++ b/todoapp/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.google.gms:google-services:4.3.3'
+    }
+}
+
 allprojects {
     repositories {
         google()
