--- a/todoapp/pubspec.yaml
+++ b/todoapp/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
+  gap: ^3.0.1
+  fluttertoast: ^8.2.6
+  firebase_database: ^11.0.3
+  shared_preferences: ^2.2.3
+  auto_size_text_field: ^2.2.3
 
 dev_dependencies:
   flutter_test:
