--- a/todoapp/pubspec.yaml
+++ b/todoapp/pubspec.yaml
@@ -20,12 +20,18 @@ dependencies:
   firebase_database: ^11.0.3
   shared_preferences: ^2.2.3
   auto_size_text_field: ^2.2.3
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/file.png"
 
 flutter:
   uses-material-design: true
