--- a/todoapp/pubspec.yaml
+++ b/todoapp/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.2
   audioplayers: ^6.0.0
+  google_sign_in: ^6.2.1
+  flutter_facebook_auth: ^7.0.1
 
 dev_dependencies:
   flutter_test:
